[package]
name = "import-1p-to-pass"
version = "0.1.0"
edition = "2024"
description = "Import a 1Password .1pux export into pass (passwordstore.org)"

[[bin]]
name = "import-1p-to-pass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
